--- a/css/main.css
+++ b/css/main.css
@@ -7,9 +7,8 @@ canvas {
 }
 
 #wrapper {
-    position: absolute;
+    margin: 0 auto;
     width: 960px;
-    margin-left: 10%;
     text-align: center;
 }
 
@@ -20,8 +19,6 @@ canvas {
 #enemy-canvas {
     z-index: 3;
 }
-
- 
 
 #background {
     z-index: 1;
