--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,16 @@ canvas {
     z-index: 100;
 }
 
+.score {
+    width: 3%;
+    height: 5%;
+    position: absolute;
+    left: 18%;
+    top: 1%;
+    z-index: 100;
+    font-size: 5rem
+}
+
 #soundOff {
     display: none;
 }
