--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #d88c64;
+    background-image: url('../images/board_black_line_texture_background_wood_55220_1920x1080.jpg');
 }
 
 canvas {
