--- a/css/main.css
+++ b/css/main.css
@@ -38,18 +38,21 @@ canvas {
     height: 5%;
     position: absolute;
     left: 71%;
-    top: 2%;
+    top: 4%;
     z-index: 100;
 }
 
 .score {
-    width: 3%;
+    font-family: 'Chicle', cursive;
+    color: white;
+    text-shadow: 2px 2px black;
+    width: 5%;
     height: 5%;
     position: absolute;
-    left: 18%;
+    left: 22%;
     top: 1%;
     z-index: 100;
-    font-size: 5rem
+    font-size: 6rem
 }
 
 #soundOff {
